convert from websocket to ajax

--- a/.cro.yml
+++ b/.cro.yml
@@ -1,6 +1,6 @@
 ---
 cro: 1
-id: WebChat
+id: CSSTidy
 env:  []
 endpoints: 
   - 
@@ -11,5 +11,5 @@ endpoints:
     name: HTTPS
 entrypoint: service.p6
 links:  []
-name: WebChat
+name: CSSTidy
 ...
